@@ -1,5 +1,5 @@
 /*
- * Copyright ConsenSys AG.
+ * Copyright contributors to Hyperledger Besu.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -18,62 +18,89 @@ import static org.hyperledger.besu.controller.BesuController.DATABASE_PATH;
 
 import org.hyperledger.besu.Runner;
 import org.hyperledger.besu.RunnerBuilder;
+import org.hyperledger.besu.chainexport.RlpBlockExporter;
+import org.hyperledger.besu.chainimport.JsonBlockImporter;
+import org.hyperledger.besu.chainimport.RlpBlockImporter;
+import org.hyperledger.besu.cli.BesuCommand;
 import org.hyperledger.besu.cli.config.EthNetworkConfig;
 import org.hyperledger.besu.cli.config.NetworkName;
+import org.hyperledger.besu.components.BesuComponent;
 import org.hyperledger.besu.config.GenesisConfigFile;
-import org.hyperledger.besu.consensus.qbft.pki.PkiBlockCreationConfigurationProvider;
 import org.hyperledger.besu.controller.BesuController;
 import org.hyperledger.besu.controller.BesuControllerBuilder;
 import org.hyperledger.besu.crypto.KeyPairUtil;
 import org.hyperledger.besu.cryptoservices.KeyPairSecurityModule;
 import org.hyperledger.besu.cryptoservices.NodeKey;
 import org.hyperledger.besu.ethereum.GasLimitCalculator;
+import org.hyperledger.besu.ethereum.api.ApiConfiguration;
 import org.hyperledger.besu.ethereum.api.graphql.GraphQLConfiguration;
+import org.hyperledger.besu.ethereum.api.jsonrpc.InProcessRpcConfiguration;
+import org.hyperledger.besu.ethereum.chain.Blockchain;
+import org.hyperledger.besu.ethereum.core.ImmutableMiningParameters;
+import org.hyperledger.besu.ethereum.core.MiningParameters;
+import org.hyperledger.besu.ethereum.core.plugins.PluginConfiguration;
 import org.hyperledger.besu.ethereum.eth.EthProtocolConfiguration;
 import org.hyperledger.besu.ethereum.eth.sync.SynchronizerConfiguration;
+import org.hyperledger.besu.ethereum.eth.transactions.BlobCacheModule;
 import org.hyperledger.besu.ethereum.eth.transactions.ImmutableTransactionPoolConfiguration;
 import org.hyperledger.besu.ethereum.eth.transactions.TransactionPoolConfiguration;
+import org.hyperledger.besu.ethereum.mainnet.ProtocolSchedule;
 import org.hyperledger.besu.ethereum.p2p.peers.EnodeURLImpl;
 import org.hyperledger.besu.ethereum.storage.keyvalue.KeyValueStorageProvider;
 import org.hyperledger.besu.ethereum.storage.keyvalue.KeyValueStorageProviderBuilder;
+import org.hyperledger.besu.ethereum.transaction.TransactionSimulator;
+import org.hyperledger.besu.ethereum.trie.diffbased.bonsai.cache.BonsaiCachedMerkleTrieLoaderModule;
+import org.hyperledger.besu.ethereum.worldstate.DataStorageConfiguration;
+import org.hyperledger.besu.ethereum.worldstate.WorldStateArchive;
 import org.hyperledger.besu.evm.internal.EvmConfiguration;
-import org.hyperledger.besu.metrics.MetricsSystemFactory;
+import org.hyperledger.besu.metrics.MetricsSystemModule;
 import org.hyperledger.besu.metrics.ObservableMetricsSystem;
+import org.hyperledger.besu.metrics.prometheus.MetricsConfiguration;
 import org.hyperledger.besu.plugin.data.EnodeURL;
 import org.hyperledger.besu.plugin.services.BesuConfiguration;
 import org.hyperledger.besu.plugin.services.BesuEvents;
+import org.hyperledger.besu.plugin.services.BlockchainService;
+import org.hyperledger.besu.plugin.services.MetricsSystem;
+import org.hyperledger.besu.plugin.services.PermissioningService;
 import org.hyperledger.besu.plugin.services.PicoCLIOptions;
-import org.hyperledger.besu.plugin.services.PluginTransactionValidatorService;
+import org.hyperledger.besu.plugin.services.PrivacyPluginService;
 import org.hyperledger.besu.plugin.services.RpcEndpointService;
 import org.hyperledger.besu.plugin.services.SecurityModuleService;
 import org.hyperledger.besu.plugin.services.StorageService;
+import org.hyperledger.besu.plugin.services.TransactionPoolValidatorService;
 import org.hyperledger.besu.plugin.services.TransactionSelectionService;
+import org.hyperledger.besu.plugin.services.TransactionSimulationService;
 import org.hyperledger.besu.plugin.services.storage.rocksdb.RocksDBPlugin;
-import org.hyperledger.besu.plugin.services.txselection.PluginTransactionSelectorFactory;
-import org.hyperledger.besu.plugin.services.txvalidator.PluginTransactionValidatorFactory;
 import org.hyperledger.besu.services.BesuConfigurationImpl;
 import org.hyperledger.besu.services.BesuEventsImpl;
 import org.hyperledger.besu.services.BesuPluginContextImpl;
+import org.hyperledger.besu.services.BlockchainServiceImpl;
 import org.hyperledger.besu.services.PermissioningServiceImpl;
 import org.hyperledger.besu.services.PicoCLIOptionsImpl;
-import org.hyperledger.besu.services.PluginTransactionValidatorServiceImpl;
+import org.hyperledger.besu.services.PrivacyPluginServiceImpl;
 import org.hyperledger.besu.services.RpcEndpointServiceImpl;
 import org.hyperledger.besu.services.SecurityModuleServiceImpl;
 import org.hyperledger.besu.services.StorageServiceImpl;
+import org.hyperledger.besu.services.TransactionPoolValidatorServiceImpl;
 import org.hyperledger.besu.services.TransactionSelectionServiceImpl;
+import org.hyperledger.besu.services.TransactionSimulationServiceImpl;
+import org.hyperledger.besu.services.kvstore.InMemoryStoragePlugin;
 
 import java.io.File;
 import java.nio.file.Path;
 import java.time.Clock;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+import javax.inject.Inject;
+import javax.inject.Named;
+import javax.inject.Singleton;
 
+import dagger.Component;
+import dagger.Module;
+import dagger.Provides;
 import io.opentelemetry.api.GlobalOpenTelemetry;
 import io.vertx.core.Vertx;
 import org.slf4j.Logger;
@@ -89,46 +116,6 @@ public class ThreadBesuNodeRunner implements BesuNodeRunner {
 
   private final Map<Node, BesuPluginContextImpl> besuPluginContextMap = new ConcurrentHashMap<>();
 
-  private BesuPluginContextImpl buildPluginContext(
-      final BesuNode node,
-      final StorageServiceImpl storageService,
-      final SecurityModuleServiceImpl securityModuleService,
-      final BesuConfiguration commonPluginConfiguration) {
-    final CommandLine commandLine = new CommandLine(CommandSpec.create());
-    final BesuPluginContextImpl besuPluginContext = new BesuPluginContextImpl();
-    besuPluginContext.addService(StorageService.class, storageService);
-    besuPluginContext.addService(SecurityModuleService.class, securityModuleService);
-    besuPluginContext.addService(PicoCLIOptions.class, new PicoCLIOptionsImpl(commandLine));
-    besuPluginContext.addService(RpcEndpointService.class, new RpcEndpointServiceImpl());
-    besuPluginContext.addService(
-        TransactionSelectionService.class, new TransactionSelectionServiceImpl());
-    besuPluginContext.addService(
-        PluginTransactionValidatorService.class, new PluginTransactionValidatorServiceImpl());
-    final Path pluginsPath;
-    final String pluginDir = System.getProperty("besu.plugins.dir");
-    if (pluginDir == null || pluginDir.isEmpty()) {
-      pluginsPath = node.homeDirectory().resolve("plugins");
-      final File pluginsDirFile = pluginsPath.toFile();
-      if (!pluginsDirFile.isDirectory()) {
-        pluginsDirFile.mkdirs();
-        pluginsDirFile.deleteOnExit();
-      }
-      System.setProperty("besu.plugins.dir", pluginsPath.toString());
-    } else {
-      pluginsPath = Path.of(pluginDir);
-    }
-    besuPluginContext.registerPlugins(pluginsPath);
-
-    commandLine.parseArgs(node.getConfiguration().getExtraCLIOptions().toArray(new String[0]));
-
-    besuPluginContext.addService(BesuConfiguration.class, commonPluginConfiguration);
-
-    // register built-in plugins
-    new RocksDBPlugin().register(besuPluginContext);
-
-    return besuPluginContext;
-  }
-
   @Override
   public void startNode(final BesuNode node) {
 
@@ -141,88 +128,45 @@ public class ThreadBesuNodeRunner implements BesuNodeRunner {
       throw new UnsupportedOperationException("commands are not supported with thread runner");
     }
 
-    final StorageServiceImpl storageService = new StorageServiceImpl();
-    final SecurityModuleServiceImpl securityModuleService = new SecurityModuleServiceImpl();
+    BesuNodeProviderModule module = new BesuNodeProviderModule(node);
+    AcceptanceTestBesuComponent component =
+        DaggerThreadBesuNodeRunner_AcceptanceTestBesuComponent.builder()
+            .besuNodeProviderModule(module)
+            .build();
+
     final Path dataDir = node.homeDirectory();
-    final BesuConfiguration commonPluginConfiguration =
-        new BesuConfigurationImpl(dataDir, dataDir.resolve(DATABASE_PATH));
-    final BesuPluginContextImpl besuPluginContext =
-        besuPluginContextMap.computeIfAbsent(
-            node,
-            n ->
-                buildPluginContext(
-                    node, storageService, securityModuleService, commonPluginConfiguration));
+    final PermissioningServiceImpl permissioningService = new PermissioningServiceImpl();
 
     GlobalOpenTelemetry.resetForTest();
-    final ObservableMetricsSystem metricsSystem =
-        MetricsSystemFactory.create(node.getMetricsConfiguration());
+    final ObservableMetricsSystem metricsSystem = component.getObservableMetricsSystem();
     final List<EnodeURL> bootnodes =
-        node.getConfiguration().getBootnodes().stream()
-            .map(EnodeURLImpl::fromURI)
-            .collect(Collectors.toList());
-    final NetworkName network = node.getNetwork() == null ? NetworkName.DEV : node.getNetwork();
-    final EthNetworkConfig.Builder networkConfigBuilder =
-        new EthNetworkConfig.Builder(EthNetworkConfig.getNetworkConfig(network))
-            .setBootNodes(bootnodes);
-    node.getConfiguration().getGenesisConfig().ifPresent(networkConfigBuilder::setGenesisConfig);
+        node.getConfiguration().getBootnodes().stream().map(EnodeURLImpl::fromURI).toList();
+
+    final EthNetworkConfig.Builder networkConfigBuilder = component.ethNetworkConfigBuilder();
+    networkConfigBuilder.setBootNodes(bootnodes);
+    node.getConfiguration()
+        .getGenesisConfig()
+        .map(GenesisConfigFile::fromConfig)
+        .ifPresent(networkConfigBuilder::setGenesisConfigFile);
     final EthNetworkConfig ethNetworkConfig = networkConfigBuilder.build();
-    final SynchronizerConfiguration synchronizerConfiguration =
-        new SynchronizerConfiguration.Builder().build();
-    final BesuControllerBuilder builder =
-        new BesuController.Builder()
-            .fromEthNetworkConfig(
-                ethNetworkConfig, Collections.emptyMap(), synchronizerConfiguration.getSyncMode());
+    final BesuControllerBuilder builder = component.besuControllerBuilder();
+    builder.isRevertReasonEnabled(node.isRevertReasonEnabled());
+    builder.networkConfiguration(node.getNetworkingConfiguration());
 
-    final KeyValueStorageProvider storageProvider =
-        new KeyValueStorageProviderBuilder()
-            .withStorageFactory(storageService.getByName("rocksdb").get())
-            .withCommonConfiguration(commonPluginConfiguration)
-            .withMetricsSystem(metricsSystem)
-            .build();
-
-    final TransactionPoolConfiguration txPoolConfig =
-        ImmutableTransactionPoolConfiguration.builder()
-            .from(node.getTransactionPoolConfiguration())
-            .strictTransactionReplayProtectionEnabled(node.isStrictTxReplayProtectionEnabled())
-            .build();
-
-    final int maxPeers = 25;
-
-    final Optional<PluginTransactionSelectorFactory> transactionSelectorFactory =
-        getTransactionSelectorFactory(besuPluginContext);
-
-    final PluginTransactionValidatorFactory pluginTransactionValidatorFactory =
-        getPluginTransactionValidatorFactory(besuPluginContext);
-    builder
-        .synchronizerConfiguration(new SynchronizerConfiguration.Builder().build())
-        .dataDirectory(node.homeDirectory())
-        .miningParameters(node.getMiningParameters())
-        .privacyParameters(node.getPrivacyParameters())
-        .nodeKey(new NodeKey(new KeyPairSecurityModule(KeyPairUtil.loadKeyPair(dataDir))))
-        .metricsSystem(metricsSystem)
-        .transactionPoolConfiguration(txPoolConfig)
-        .ethProtocolConfiguration(EthProtocolConfiguration.defaultConfig())
-        .clock(Clock.systemUTC())
-        .isRevertReasonEnabled(node.isRevertReasonEnabled())
-        .storageProvider(storageProvider)
-        .gasLimitCalculator(GasLimitCalculator.constant())
-        .pkiBlockCreationConfiguration(
-            node.getPkiKeyStoreConfiguration()
-                .map(pkiConfig -> new PkiBlockCreationConfigurationProvider().load(pkiConfig)))
-        .evmConfiguration(EvmConfiguration.DEFAULT)
-        .maxPeers(maxPeers)
-        .lowerBoundPeers(maxPeers)
-        .maxRemotelyInitiatedPeers(15)
-        .networkConfiguration(node.getNetworkingConfiguration())
-        .randomPeerPriority(false)
-        .transactionSelectorFactory(transactionSelectorFactory)
-        .pluginTransactionValidatorFactory(pluginTransactionValidatorFactory);
+    builder.dataDirectory(dataDir);
+    builder.nodeKey(new NodeKey(new KeyPairSecurityModule(KeyPairUtil.loadKeyPair(dataDir))));
+    builder.privacyParameters(node.getPrivacyParameters());
 
     node.getGenesisConfig()
         .map(GenesisConfigFile::fromConfig)
         .ifPresent(builder::genesisConfigFile);
 
-    final BesuController besuController = builder.build();
+    final BesuController besuController = component.besuController();
+
+    InProcessRpcConfiguration inProcessRpcConfiguration = node.inProcessRpcConfiguration();
+
+    final BesuPluginContextImpl besuPluginContext =
+        besuPluginContextMap.computeIfAbsent(node, n -> component.getBesuPluginContext());
 
     final RunnerBuilder runnerBuilder = new RunnerBuilder();
     runnerBuilder.permissioningConfiguration(node.getPermissioningConfiguration());
@@ -241,24 +185,20 @@ public class ThreadBesuNodeRunner implements BesuNodeRunner {
         .jsonRpcIpcConfiguration(node.jsonRpcIpcConfiguration())
         .dataDir(node.homeDirectory())
         .metricsSystem(metricsSystem)
-        .permissioningService(new PermissioningServiceImpl())
+        .permissioningService(permissioningService)
         .metricsConfiguration(node.getMetricsConfiguration())
         .p2pEnabled(node.isP2pEnabled())
         .p2pTLSConfiguration(node.getTLSConfiguration())
         .graphQLConfiguration(GraphQLConfiguration.createDefault())
-        .staticNodes(
-            node.getStaticNodes().stream()
-                .map(EnodeURLImpl::fromString)
-                .collect(Collectors.toList()))
-        .besuPluginContext(new BesuPluginContextImpl())
+        .staticNodes(node.getStaticNodes().stream().map(EnodeURLImpl::fromString).toList())
+        .besuPluginContext(besuPluginContext)
         .autoLogBloomCaching(false)
-        .storageProvider(storageProvider)
-        .rpcEndpointService(new RpcEndpointServiceImpl());
+        .storageProvider(besuController.getStorageProvider())
+        .rpcEndpointService(component.rpcEndpointService())
+        .inProcessRpcConfiguration(inProcessRpcConfiguration);
     node.engineRpcConfiguration().ifPresent(runnerBuilder::engineJsonRpcConfiguration);
-
-    final Runner runner = runnerBuilder.build();
-
     besuPluginContext.beforeExternalServices();
+    final Runner runner = runnerBuilder.build();
 
     runner.startExternalServices();
 
@@ -268,7 +208,11 @@ public class ThreadBesuNodeRunner implements BesuNodeRunner {
             besuController.getProtocolContext().getBlockchain(),
             besuController.getProtocolManager().getBlockBroadcaster(),
             besuController.getTransactionPool(),
-            besuController.getSyncState()));
+            besuController.getSyncState(),
+            besuController.getProtocolContext().getBadBlockManager()));
+
+    component.rpcEndpointService().init(runner.getInProcessRpcMethods());
+
     besuPluginContext.startPlugins();
 
     runner.startEthereumMainLoop();
@@ -327,17 +271,330 @@ public class ThreadBesuNodeRunner implements BesuNodeRunner {
     throw new RuntimeException("Console contents can only be captured in process execution");
   }
 
-  private Optional<PluginTransactionSelectorFactory> getTransactionSelectorFactory(
-      final BesuPluginContextImpl besuPluginContext) {
-    final Optional<TransactionSelectionService> txSelectionService =
-        besuPluginContext.getService(TransactionSelectionService.class);
-    return txSelectionService.isPresent() ? txSelectionService.get().get() : Optional.empty();
+  @Module
+  static class BesuNodeProviderModule {
+
+    private final BesuNode toProvide;
+
+    public BesuNodeProviderModule(final BesuNode toProvide) {
+      this.toProvide = toProvide;
+    }
+
+    @Provides
+    public BesuNode provideBesuNodeRunner() {
+      return toProvide;
+    }
+
+    @Provides
+    @Named("ExtraCLIOptions")
+    public List<String> provideExtraCLIOptions() {
+      return toProvide.getExtraCLIOptions();
+    }
+
+    @Provides
+    Path provideDataDir() {
+      return toProvide.homeDirectory();
+    }
+
+    @Provides
+    @Singleton
+    RpcEndpointServiceImpl provideRpcEndpointService() {
+      return new RpcEndpointServiceImpl();
+    }
+
+    @Provides
+    @Singleton
+    BlockchainServiceImpl provideBlockchainService(final BesuController besuController) {
+      BlockchainServiceImpl retval = new BlockchainServiceImpl();
+      retval.init(besuController.getProtocolContext(), besuController.getProtocolSchedule());
+      return retval;
+    }
+
+    @Provides
+    @Singleton
+    Blockchain provideBlockchain(final BesuController besuController) {
+      return besuController.getProtocolContext().getBlockchain();
+    }
+
+    @Provides
+    @SuppressWarnings("CloseableProvides")
+    WorldStateArchive provideWorldStateArchive(final BesuController besuController) {
+      return besuController.getProtocolContext().getWorldStateArchive();
+    }
+
+    @Provides
+    ProtocolSchedule provideProtocolSchedule(final BesuController besuController) {
+      return besuController.getProtocolSchedule();
+    }
+
+    @Provides
+    ApiConfiguration provideApiConfiguration(final BesuNode node) {
+      return node.getApiConfiguration();
+    }
+
+    @Provides
+    @Singleton
+    TransactionPoolValidatorServiceImpl provideTransactionPoolValidatorService() {
+      return new TransactionPoolValidatorServiceImpl();
+    }
+
+    @Provides
+    @Singleton
+    TransactionSelectionServiceImpl provideTransactionSelectionService() {
+      return new TransactionSelectionServiceImpl();
+    }
+
+    @Provides
+    @Singleton
+    TransactionPoolConfiguration provideTransactionPoolConfiguration(
+        final BesuNode node,
+        final TransactionPoolValidatorServiceImpl transactionPoolValidatorServiceImpl) {
+
+      TransactionPoolConfiguration txPoolConfig =
+          ImmutableTransactionPoolConfiguration.builder()
+              .from(node.getTransactionPoolConfiguration())
+              .strictTransactionReplayProtectionEnabled(node.isStrictTxReplayProtectionEnabled())
+              .transactionPoolValidatorService(transactionPoolValidatorServiceImpl)
+              .build();
+      return txPoolConfig;
+    }
+
+    @Provides
+    @Singleton
+    TransactionSimulator provideTransactionSimulator(
+        final Blockchain blockchain,
+        final WorldStateArchive worldStateArchive,
+        final ProtocolSchedule protocolSchedule,
+        final ApiConfiguration apiConfiguration) {
+      return new TransactionSimulator(
+          blockchain, worldStateArchive, protocolSchedule, apiConfiguration.getGasCap());
+    }
+
+    @Provides
+    @Singleton
+    TransactionSimulationServiceImpl provideTransactionSimulationService(
+        final Blockchain blockchain, final TransactionSimulator transactionSimulator) {
+      TransactionSimulationServiceImpl retval = new TransactionSimulationServiceImpl();
+      retval.init(blockchain, transactionSimulator);
+      return retval;
+    }
   }
 
-  private PluginTransactionValidatorFactory getPluginTransactionValidatorFactory(
-      final BesuPluginContextImpl besuPluginContext) {
-    final Optional<PluginTransactionValidatorService> txValidatorService =
-        besuPluginContext.getService(PluginTransactionValidatorService.class);
-    return txValidatorService.map(PluginTransactionValidatorService::get).orElse(null);
+  @Module
+  @SuppressWarnings("CloseableProvides")
+  static class BesuControllerModule {
+    @Provides
+    @Singleton
+    public SynchronizerConfiguration provideSynchronizationConfiguration() {
+      final SynchronizerConfiguration synchronizerConfiguration =
+          SynchronizerConfiguration.builder().build();
+      return synchronizerConfiguration;
+    }
+
+    @Singleton
+    @Provides
+    public BesuControllerBuilder provideBesuControllerBuilder(
+        final EthNetworkConfig ethNetworkConfig,
+        final SynchronizerConfiguration synchronizerConfiguration,
+        final TransactionPoolConfiguration transactionPoolConfiguration) {
+
+      final BesuControllerBuilder builder =
+          new BesuController.Builder()
+              .fromEthNetworkConfig(ethNetworkConfig, synchronizerConfiguration.getSyncMode());
+      builder.transactionPoolConfiguration(transactionPoolConfiguration);
+      return builder;
+    }
+
+    @Provides
+    @Singleton
+    public BesuController provideBesuController(
+        final SynchronizerConfiguration synchronizerConfiguration,
+        final BesuControllerBuilder builder,
+        final ObservableMetricsSystem metricsSystem,
+        final KeyValueStorageProvider storageProvider,
+        final MiningParameters miningParameters) {
+
+      builder
+          .synchronizerConfiguration(synchronizerConfiguration)
+          .metricsSystem(metricsSystem)
+          .dataStorageConfiguration(DataStorageConfiguration.DEFAULT_FOREST_CONFIG)
+          .ethProtocolConfiguration(EthProtocolConfiguration.defaultConfig())
+          .clock(Clock.systemUTC())
+          .storageProvider(storageProvider)
+          .gasLimitCalculator(GasLimitCalculator.constant())
+          .evmConfiguration(EvmConfiguration.DEFAULT)
+          .maxPeers(25)
+          .maxRemotelyInitiatedPeers(15)
+          .miningParameters(miningParameters)
+          .randomPeerPriority(false)
+          .besuComponent(null);
+      return builder.build();
+    }
+
+    @Provides
+    @Singleton
+    public EthNetworkConfig.Builder provideEthNetworkConfigBuilder() {
+      final EthNetworkConfig.Builder networkConfigBuilder =
+          new EthNetworkConfig.Builder(EthNetworkConfig.getNetworkConfig(NetworkName.DEV));
+      return networkConfigBuilder;
+    }
+
+    @Provides
+    public EthNetworkConfig provideEthNetworkConfig(
+        final EthNetworkConfig.Builder networkConfigBuilder) {
+
+      final EthNetworkConfig ethNetworkConfig = networkConfigBuilder.build();
+      return ethNetworkConfig;
+    }
+
+    @Provides
+    public BesuPluginContextImpl providePluginContext(
+        final StorageServiceImpl storageService,
+        final SecurityModuleServiceImpl securityModuleService,
+        final TransactionSimulationServiceImpl transactionSimulationServiceImpl,
+        final TransactionSelectionServiceImpl transactionSelectionServiceImpl,
+        final TransactionPoolValidatorServiceImpl transactionPoolValidatorServiceImpl,
+        final BlockchainServiceImpl blockchainServiceImpl,
+        final RpcEndpointServiceImpl rpcEndpointServiceImpl,
+        final BesuConfiguration commonPluginConfiguration,
+        final PermissioningServiceImpl permissioningService,
+        final @Named("ExtraCLIOptions") List<String> extraCLIOptions) {
+      final CommandLine commandLine = new CommandLine(CommandSpec.create());
+      final BesuPluginContextImpl besuPluginContext = new BesuPluginContextImpl();
+      besuPluginContext.addService(StorageService.class, storageService);
+      besuPluginContext.addService(SecurityModuleService.class, securityModuleService);
+      besuPluginContext.addService(PicoCLIOptions.class, new PicoCLIOptionsImpl(commandLine));
+      besuPluginContext.addService(RpcEndpointService.class, rpcEndpointServiceImpl);
+      besuPluginContext.addService(
+          TransactionSelectionService.class, transactionSelectionServiceImpl);
+      besuPluginContext.addService(
+          TransactionPoolValidatorService.class, transactionPoolValidatorServiceImpl);
+      besuPluginContext.addService(
+          TransactionSimulationService.class, transactionSimulationServiceImpl);
+      besuPluginContext.addService(BlockchainService.class, blockchainServiceImpl);
+      besuPluginContext.addService(BesuConfiguration.class, commonPluginConfiguration);
+
+      final Path pluginsPath;
+      final String pluginDir = System.getProperty("besu.plugins.dir");
+      if (pluginDir == null || pluginDir.isEmpty()) {
+        pluginsPath = commonPluginConfiguration.getDataPath().resolve("plugins");
+        final File pluginsDirFile = pluginsPath.toFile();
+        if (!pluginsDirFile.isDirectory()) {
+          pluginsDirFile.mkdirs();
+          pluginsDirFile.deleteOnExit();
+        }
+        System.setProperty("besu.plugins.dir", pluginsPath.toString());
+      } else {
+        pluginsPath = Path.of(pluginDir);
+      }
+
+      besuPluginContext.addService(BesuConfiguration.class, commonPluginConfiguration);
+      besuPluginContext.addService(PermissioningService.class, permissioningService);
+      besuPluginContext.addService(PrivacyPluginService.class, new PrivacyPluginServiceImpl());
+
+      besuPluginContext.registerPlugins(
+          new PluginConfiguration.Builder().pluginsDir(pluginsPath).build());
+      commandLine.parseArgs(extraCLIOptions.toArray(new String[0]));
+
+      // register built-in plugins
+      new RocksDBPlugin().register(besuPluginContext);
+      return besuPluginContext;
+    }
+
+    @Provides
+    public KeyValueStorageProvider provideKeyValueStorageProvider(
+        final BesuConfiguration commonPluginConfiguration, final MetricsSystem metricsSystem) {
+
+      final StorageServiceImpl storageService = new StorageServiceImpl();
+      storageService.registerKeyValueStorage(
+          new InMemoryStoragePlugin.InMemoryKeyValueStorageFactory("memory"));
+      final KeyValueStorageProvider storageProvider =
+          new KeyValueStorageProviderBuilder()
+              .withStorageFactory(storageService.getByName("memory").get())
+              .withCommonConfiguration(commonPluginConfiguration)
+              .withMetricsSystem(metricsSystem)
+              .build();
+
+      return storageProvider;
+    }
+
+    @Provides
+    public MiningParameters provideMiningParameters(
+        final TransactionSelectionServiceImpl transactionSelectionServiceImpl,
+        final BesuNode node) {
+      final var miningParameters =
+          ImmutableMiningParameters.builder()
+              .from(node.getMiningParameters())
+              .transactionSelectionService(transactionSelectionServiceImpl)
+              .build();
+
+      return miningParameters;
+    }
+
+    @Provides
+    @Inject
+    BesuConfiguration provideBesuConfiguration(
+        final Path dataDir, final MiningParameters miningParameters, final BesuNode node) {
+      final BesuConfigurationImpl commonPluginConfiguration = new BesuConfigurationImpl();
+      commonPluginConfiguration.init(
+          dataDir, dataDir.resolve(DATABASE_PATH), node.getDataStorageConfiguration());
+      commonPluginConfiguration.withMiningParameters(miningParameters);
+      return commonPluginConfiguration;
+    }
+  }
+
+  @Module
+  static class MockBesuCommandModule {
+
+    @Provides
+    BesuCommand provideBesuCommand(final BesuPluginContextImpl pluginContext) {
+      final BesuCommand besuCommand =
+          new BesuCommand(
+              RlpBlockImporter::new,
+              JsonBlockImporter::new,
+              RlpBlockExporter::new,
+              new RunnerBuilder(),
+              new BesuController.Builder(),
+              pluginContext,
+              System.getenv(),
+              LoggerFactory.getLogger(MockBesuCommandModule.class));
+      besuCommand.toCommandLine();
+      return besuCommand;
+    }
+
+    @Provides
+    @Singleton
+    MetricsConfiguration provideMetricsConfiguration() {
+      return MetricsConfiguration.builder().build();
+    }
+
+    @Provides
+    @Named("besuCommandLogger")
+    @Singleton
+    Logger provideBesuCommandLogger() {
+      return LoggerFactory.getLogger(MockBesuCommandModule.class);
+    }
+  }
+
+  @Singleton
+  @Component(
+      modules = {
+        ThreadBesuNodeRunner.BesuControllerModule.class,
+        ThreadBesuNodeRunner.MockBesuCommandModule.class,
+        BonsaiCachedMerkleTrieLoaderModule.class,
+        MetricsSystemModule.class,
+        ThreadBesuNodeRunner.BesuNodeProviderModule.class,
+        BlobCacheModule.class
+      })
+  public interface AcceptanceTestBesuComponent extends BesuComponent {
+    BesuController besuController();
+
+    BesuControllerBuilder besuControllerBuilder(); // TODO: needing this sucks
+
+    EthNetworkConfig.Builder ethNetworkConfigBuilder();
+
+    RpcEndpointServiceImpl rpcEndpointService();
+
+    BlockchainServiceImpl blockchainService();
   }
 }
