@@ -29,7 +29,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ScheduledFuture;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -86,8 +85,8 @@ public class NewPooledTransactionHashesMessageProcessor {
 
       LOG.atTrace()
           .setMessage(
-              "Received pooled transaction hashes message from {}... incoming hashes {}, incoming list {}")
-          .addArgument(() -> peer == null ? null : peer.getShortNodeId())
+              "Received pooled transaction hashes message from {} incoming hashes {}, incoming list {}")
+          .addArgument(() -> peer == null ? null : peer.getLoggableId())
           .addArgument(incomingTransactionHashes::size)
           .addArgument(incomingTransactionHashes)
           .log();
@@ -121,7 +120,7 @@ public class NewPooledTransactionHashesMessageProcessor {
       bufferedTask.addHashes(
           incomingTransactionHashes.stream()
               .filter(hash -> transactionPool.getTransactionByHash(hash).isEmpty())
-              .collect(Collectors.toList()));
+              .toList());
     } catch (final RLPException ex) {
       if (peer != null) {
         LOG.debug(
@@ -129,7 +128,7 @@ public class NewPooledTransactionHashesMessageProcessor {
             peer,
             ex);
         LOG.trace("Message data: {}", transactionsMessage.getData());
-        peer.disconnect(DisconnectReason.BREACH_OF_PROTOCOL);
+        peer.disconnect(DisconnectReason.BREACH_OF_PROTOCOL_MALFORMED_MESSAGE_RECEIVED);
       }
     }
   }
